# subagent

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.release  Dockerfile.test  README.md  SECURITY.md  SKILL.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: cli-demo.tape
prompts/: agent-readonly.md  agent-write.md  agent.md  context-compaction.md  context-summary-request.md  empty-completion-retry.md  side.md
references/: cli.schema.json  protocol.md
scripts/: demo-session.sh
src/: agent.rs  cli.rs  config.rs  daemon.rs  ipc.rs  main.rs  model.rs  prompts.rs  store.rs  tools.rs  web.rs
tests/: e2e.sh  mock_openai.py  schema_contract.py  ui_core.test.js  validate_schema.py
web/: app.css  app.js  index.html  ui-core.js
