[package]
name = "subagent"
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
description = "Agent-first CLI and daemon for managing background coding agents"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
globset = "0.4"
ignore = "0.4"
libc = "0.2"
mime_guess = "2.0"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
toml = "0.9"
ulid = { version = "1.2", features = ["serde"] }

[dev-dependencies]
tempfile = "3.20"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
